# Data4Good_Climate_Analysis

./: AQScripts.py  Calgary_Historical_Air_Quality.ipynb  Community District Boundaries.geojson  HistoricalGraph.py  README.md  aiq_map.json  aiqmap.json  calgary_emissions_data.ipynb  index.html  predictions_plotly.json  pyproject.toml  recent_history.json  requirements.txt  tweetImageOnly.py
.github/workflows/: update.yml
input/: aiq.json  aiq_map.json  index.md
layout/: page.html
