[tool.poetry]
name = "calgary-pollution"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.10"
scikit-learn = "^1.0.2"
statsmodels = "^0.13.2"
pyairvisual = "^2021.10.0"
hmmlearn = "^0.2.7"
plotly = "^5.6.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
geopy = "^2.2.0"
Shapely = "^1.8.1"
requests = "^2.27.1"
tweepy = "^4.8.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.9"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
